# tp2-PIPELINE

./: .gitignore  04_TP2_PIPELINE.md  04_TP2_PIPELINE_BIS.md  README.md  pyproject.toml
data/processed/: chocolats_clean_20251216_215516.parquet
data/raw/: chocolats_fr_20251216_211412.json
notebooks/: exploration.ipynb
pipeline/: config.py  fetcher.py  main.py  storage.py  transformer.py
